--- a/source code/index.html
+++ b/source code/index.html
@@ -19,70 +19,20 @@
     <div class="container">
         <div class="con1">
             <h1>Best of NCS - No Copyright Song</h1>
-            <div class="songlistmain">
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/1.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/2.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/3.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/4.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/5.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/6.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/7.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/8.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/9.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
-                <div class="songlist">
-                    <img src="/Spotify/resources/covers/10.jpg" alt="">
-                    <span>song name</span>
-                    <span class="songlistplay"><span>05:34</span><i class="fa-regular fa-circle-play"></i></span>
-                </div>
+            <div class="songlistmain" id="songlistmain"> 
             </div>
-            <div class="cover"></div>
         </div>
     </div>
     <div class="bottom">
-        <input type="range" name="range" id="bar" min="0" max="100">
+        <input type="range" name="range" id="bar" value="0" min="0" max="100">
         <div class="icons">
-            <i class="fa-2x fa-solid fa-backward-fast"></i>
-            <i class="fa-2x fa-regular fa-circle-play"></i>
-            <i class="fa-2x fa-solid fa-forward-fast"></i>
+            <i id="back" class="fa-2x fa-solid fa-backward-fast"></i>
+            <i id="playbtn" class=" fa-2x fa-regular fa-circle-play"></i>
+            <i id="next" class="fa-2x fa-solid fa-forward-fast"></i>
         </div>
         <div class="songinfo">
-            <img class="gif" src="/Spotify/resources/playing.gif" width="90px" alt=""><div>song name</div>
+            <img id= "gif" class="gif" src="/Spotify/resources/playing.gif" width="70px" alt="">
+            <div>song name</div>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/20ebf21ad0.js" crossorigin="anonymous"></script>
