--- a/source code/index.html
+++ b/source code/index.html
@@ -24,16 +24,17 @@
         </div>
     </div>
     <div class="bottom">
+        <div id="songinfo" class="songinfo" >
+            <img id= "gif" class="gif" src="/Spotify/resources/playing.gif" width="50px" alt="">
+            <div id="sname"></div>
+        </div>
         <input type="range" name="range" id="bar" value="0" min="0" max="100">
         <div class="icons">
             <i id="back" class="fa-2x fa-solid fa-backward-fast"></i>
             <i id="playbtn" class=" fa-2x fa-regular fa-circle-play"></i>
             <i id="next" class="fa-2x fa-solid fa-forward-fast"></i>
         </div>
-        <div class="songinfo">
-            <img id= "gif" class="gif" src="/Spotify/resources/playing.gif" width="70px" alt="">
-            <div>song name</div>
-        </div>
+        
     </div>
     <script src="https://kit.fontawesome.com/20ebf21ad0.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
