--- a/source code/index.html
+++ b/source code/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="Image/png" href="lg.png" />
     <title>Spotify - Your favourite music is here </title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,8 +13,7 @@
     <nav>
         <ul>
             <li class="logo"><img src="/Spotify/resources/logo.png" alt="Spotify">Spotify</li>
-            <li>Home</li>
-            <li>About</li>
+            
         </ul>
     </nav>
     <div class="container">
