--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <ul>
-            <li class="logo"><img src="/Spotify/resources/logo.png" alt="Spotify">Spotify</li>
+            <li class="logo"><img src="/resources/logo.png" alt="Spotify">Spotify</li>
             
         </ul>
     </nav>
@@ -25,7 +25,7 @@
     </div>
     <div class="bottom">
         <div id="songinfo" class="songinfo" >
-            <img id= "gif" class="gif" src="/Spotify/resources/playing.gif" width="50px" alt="">
+            <img id= "gif" class="gif" src="/resources/playing.gif" width="50px" alt="">
             <div id="sname"></div>
         </div>
         <input type="range" name="range" id="bar" value="0" min="0" max="100">
